--- a/webconThema/estilo.css
+++ b/webconThema/estilo.css
@@ -19,3 +19,8 @@
 #dropdowncolor2:hover{background-color: #f10808; color: white;}
 #dropdowncolor3:hover{background-color: #0463f1; color: white;}
 #dropdowncolor4:hover{background-color: #000000; color: white;}
+
+#blocktext{
+  background-color:rgba(97, 97, 97, 0.452);
+  margin-bottom: 10%;
+}
