--- a/webconThema/estilo.css
+++ b/webconThema/estilo.css
@@ -24,3 +24,14 @@
   background-color:rgba(97, 97, 97, 0.452);
   margin-bottom: 10%;
 }
+
+
+.parallax-window {
+  min-height: 400px;
+  background: transparent;
+}
+
+.nav-transition-color{
+  transition: all 0.5s ease;
+}
+
